# verify_files

./: README.rst  TODO  make_toml.py  verifiers.toml  verify_files.py
.github/: dependabot.yml
.github/workflows/: cargo_build_and_test.yml
smc_sample/: .gitignore  Header.inc  LICENSE  Makefile  Snes_Init.asm  minimal.asm  minimal.link  minimal.smc
test_data/: .gitignore  LICENSE  license_compliance.txt  make_bad_files.py
test_data/bad/: ctime0.cbr  testfile.1.7z  testfile.1.txt.lz  testfile.2.7z  testfile.2.txt.lz  testfile.2.txt.lzma  testfile.arc  testfile.arj  testfile.cb7  testfile.cbz  testfile.chm  testfile.dashtoc  testfile.docm  testfile.epub  testfile.fat12.img  testfile.flac  testfile.gzip.squashfs  testfile.jpe  testfile.lha  testfile.lz4.squashfs  testfile.lzma.squashfs  testfile.lzo.squashfs  testfile.lzx  testfile.microsoft.cab  testfile.mml  testfile.odf  testfile.odg  testfile.odm  testfile.odp  testfile.ods  testfile.odt  testfile.otg  testfile.otp  testfile.ots  testfile.ott  testfile.pbm  testfile.pcx  testfile.pgm  testfile.potm  testfile.ppm  (+62 more)
test_data/good/: testfile.7z  testfile.arc  testfile.arj  testfile.cb7  testfile.cbz  testfile.chm  testfile.cramfs  testfile.docm  testfile.docx  testfile.epub  testfile.fat12.img  testfile.flac  testfile.gzip.squashfs  testfile.jpe  testfile.lha  testfile.lz4.squashfs  testfile.lzma.squashfs  testfile.lzo.squashfs  testfile.microsoft.cab  testfile.mml  testfile.odf  testfile.odg  testfile.odm  testfile.odp  testfile.ods  testfile.odt  testfile.otg  testfile.otp  testfile.ots  testfile.ott  testfile.pbm  testfile.pcx  testfile.pgm  testfile.potm  testfile.ppm  testfile.ppsx  testfile.pptx  testfile.protect.arj  testfile.py  testfile.rss  (+37 more)
test_data/sources/: MANIFEST.MF  Makefile  corrupt_any.py  corrupt_zip.py  make_jar.py  make_test_txt.py  testfile.hhp  testfile.html  testfile.iss  testfile.java  testfile.lzx  testfile.nsi  testfile.ps  testfile.sql  testfile.tar  testfile_foreign.sql
verify_files/: Cargo.toml  deny.toml
verify_files/src/: app.rs  builtin_handlers.rs  config.rs  helpers.rs  main.rs  processors.rs  validators.rs
