[package]
name = "verify-files"
version = "0.1.0"
authors = ["Stephan Sokolow <http://www.ssokolow.com/ContactMe>"]
edition = "2018"

[dependencies]
anyhow = "1.0.70"
faccess = "0.2.4"
ignore = "0.4.20"
json = "0.12.4"
lazy_static = "1.4.0"
log = "0.4.17"
serde = { version = "1.0.159", features = ["derive"] }
stderrlog = "0.5.4"
clap = { version = "3", features = ["derive"] }
validator = { version = "0.16.0", features = ["derive"] }
toml_edit = { version = "0.19.8", features = ["serde"] }

[dependencies.image]
default-features = false
features = ["bmp", "gif", "ico", "jpeg", "png", "pnm", "tga", "tiff"]
version = "0.24.6"
# TODO: Check why `tiff` wants a newer miniz_oxide than `png` and `flate2`

[dependencies.flate2]
version = "1.0.25"
default-features = false
features = ["miniz_oxide"]  # Make sure we're using the same backend as `image`

[dependencies.zip]
default-features = false  # Disable bzip2 because it's not pure Rust
features = ["deflate"]    # TODO: Do I need anything "time" brings?
version = "0.6.4"

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"

# Uncomment to sacrifice Drop-on-panic cleanup and std::panic::catch_unwind
# for ~24K space saving
#panic = 'abort'
